test/Fail/Issue1389.err
Issue1389.agda:1,1-17: error: [Syntax.UnquoteDefRequiresSignature]
Missing type signatures for unquoteDef x
